@@ -3578,6 +3578,10 @@ int util_write_configfile(void)
 
   if (menu_desactivado.v)                     ADD_STRING_CONFIG,"--disablemenu");
 
+  if (menu_desactivado_andexit.v)              ADD_STRING_CONFIG,"--disablemenuandexit");
+			
+
+
   if (menu_force_writing_inverse_color.v)     ADD_STRING_CONFIG,"--forcevisiblehotkeys");
   if (force_confirm_yes.v)                    ADD_STRING_CONFIG,"--forceconfirmyes");
                                               ADD_STRING_CONFIG,"--gui-style \"%s\"",definiciones_estilos_gui[estilo_gui_activo].nombre_estilo);
